Update social medias links

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           </div>
           <div class="social-media-icons">
             <div class="social-icons-card"> 
-                <a class="social_link" href="mailto:ranflindiaz@hotmail.com" ><i class="fa-solid fa-envelope"></i>Hotmail</a>
+                <a class="social_link" href="mailto:ranflindiaz@hotmail.com"><i class="fa-solid fa-envelope"></i>Hotmail</a>
             </div>
             <div class="social-icons-card"> 
-                <a class="social_link" href="#"><i class="fa-brands fa-telegram"></i>Telegram</a>
+                <a class="social_link" href="https://t.me/Ranflin" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
             </div>
             <div class="social-icons-card">
-                <a class="social_link" href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
+                <a class="social_link" href="https://twitter.com/RanflinDiaz" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
             </div>
             <div class="social-icons-card">
                 <a class="social_link" href="#"><i class="fa-brands fa-github"></i>  Github</a>
