--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 <a class="social_link" href="https://t.me/Ranflin" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
             </div>
             <div class="social-icons-card">
-                <a class="social_link" href="https://twitter.com/RanflinDiaz" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
+                <a class="social_link" href="https://twitter.com/RanflinDiaz" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a>
             </div>
             <div class="social-icons-card">
-                <a class="social_link" href="#"><i class="fa-brands fa-github"></i>  Github</a>
+                <a class="social_link" href="https://github.com/ranflindiaz"><i class="fa-brands fa-github"></i>Github</a>
             </div>
         </div>
       </section>
