--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img class="logo" src="./img/RD_logo-same-palet-color-of-website.png"/></a>
+      <a href="#"><img class="logo" src="./img/RD_logo-same-palet-color-of-website.png"/></a>
       <nav id="navbar">
         <ul class="nav-list">
           <li><a class="nav-link" href="https://github.com/ranflindiaz" target="_blank">Github</a></li>
